[package]
name = "chrome_password"
version = "0.2.0"
description = "Get username & password from Chrome."
repository = "https://github.com/justjavac/chrome_password.rs"
keywords = ["chrome", "hack", "password", "utils"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/chrome_password"
authors = ["迷渡 <justjavac@gmail.com>"]
edition = "2021"
license = "MIT"
default-run = "chrome_password"
readme = "README.md"

[[bin]]
name = "chrome_password"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.1"
base64 = "0.13.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
sqlite = "0.27.0"
tabled =  "0.8.0"
tempdir = "0.3.7"

[target.'cfg(windows)'.dependencies]
user32-sys = "0.2.0"
winapi = { version = "0.3.9", features = ["dpapi", "wincrypt", "winuser"] }

[package.metadata.winres]
OriginalFilename = "chrome_password.exe"
LegalCopyright = "© justjavac. MIT licensed."
ProductName = "chrome_password"
FileDescription = "chrome_password."

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z' # Optimize for size
panic = "abort"
strip = "symbols"
